--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
+            <version>3.2</version>
         </dependency>
 
         <dependency>
