--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.datasource.username=postgres
 spring.datasource.password=rootroot
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.flyway.baselineOnMigrate = true 
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
