--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.flyway.enabled=true
 spring.flyway.user=postgres
 spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
 spring.flyway.password=rootroot
+server.port=8081
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
